--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
-/* body {
-background-color: grey
-} */
+body {
+    background-image: url('https://images.unsplash.com/photo-1466637574441-749b8f19452f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+  }
+
 
 /* .user-container {
     display: flex;
