--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('https://images.unsplash.com/photo-1466637574441-749b8f19452f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80');
+    background-image: url("../image/background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
